[tool.poetry]
name = "arduino-kafka-streamlit"
version = "0.1.0"
description = "Streamlit that consumes data from Kafka server. Data are sourced from Arduino board's sensors, uploaded to server."
authors = ["Patrick Finnerty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
